fixing bottom margin on hero element on mobiles

--- a/src/components/carousel/carousel.style.css
+++ b/src/components/carousel/carousel.style.css
@@ -6,7 +6,7 @@
   background-size: cover;
   position: relative;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-  height: 70%;
+  height: 95%;
   display: flex;
   align-items: center;
   padding: 20px 0;
@@ -16,8 +16,9 @@
 }
 
 .buy-carousel-item {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url('../../images/buy.svg');
+  color: red;
 }
 
 .coursel-item-text-div {
@@ -31,25 +32,6 @@
   text-decoration: none;
   color: white;
 }
-/* .coursel-item-text-div {
-  display: inline-block;
-  border-top-right-radius: 15px;
-  border-bottom-right-radius: 15px;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-  background-color: rgba(0, 0, 0, 0.5);
-  padding: 5px;
-  color: white;
-  border-top-right-radius: 30px;
-  border-bottom-right-radius: 30px;
-  width: 75%;
-} */
-
-/* .coursel-item-text-div:hover {
-  background-color: rgba(0, 0, 0, 0.7);
-  cursor: pointer;
-  text-decoration: none;
-  color: white;
-} */
 
 /* select all li that is a child of ul that is  a child of buy-coursel-item-text-div*/
 .coursel-item-text-div > ul > li {
@@ -64,21 +46,26 @@
 .sell-carousel-item {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url('../../images/sell.svg');
+  background-position: left;
 }
 
 @media only screen and (min-width: 700px) {
-  .buy-carousel-item,
+  /* .buy-carousel-item,
   .invest-carousel-item,
   .sell-carousel-item {
     height: 100%;
-  }
+  } */
 
-  .coursel-item-text-div {
+  /*  {
     width: 40%;
     padding: 20px 10px;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
     background-color: rgba(0, 0, 0, 0.7);
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+  } */
+  .coursel-item-text-div li {
+    font-size: 1.4rem;
+    width: 60%;
   }
 }
